# moneta

./: .gitignore  CMakeLists.txt  README.md
configs/syzkaller/: Makefile  moneta-amdgpu.cfg  moneta-mali.cfg  moneta-nvidia-nofd.cfg  moneta-nvidia-nommio.cfg  moneta-nvidia-norecall.cfg  moneta-nvidia-nosnapshot.cfg
executor/: CMakeLists.txt  agamotto.h  executor.c  moneta.h
guest/: nvidia.patch
guest/agent/src/: Makefile.am  agamotto.h  fcntl.c  ioctl.c  moneta.c  (+5 more)
guest/linux-6.2/: linux-6.2
host/: x86-64.patch
libagamotto/: CMakeLists.txt
libagamotto/include/: agamotto.h
libagamotto/src/: fuzzer.c  intercept.c
qemu/: .git-submodule-status  Makefile  Makefile.target  configure  device_tree.c  exec.c  hmp-commands-info.hx  hmp-commands.hx  hmp.c  hmp.h  memory.c  monitor.c  qemu-options.hx  qmp.c  vl.c
qemu/block/: qapi.c
qemu/hw/: Makefile.objs
qemu/io/: channel-buffer.c
qemu/migration/: meow_hash_x64_aesni.h  moneta.c  moneta.h  periscope-delta-snap-hash.c  periscope-delta-snap.c  periscope-delta-snap.h  periscope-exec.c  periscope-kcov.c  periscope-profiler.c  periscope-syzkaller.c  periscope-timers.c  periscope-timers.h  periscope.c  periscope.h  periscope_dma.c  periscope_dma.h  periscope_perf_switches.h  qemu-file.c  ram.c  ram.h  savevm.c  savevm.h  trace-events  vmstate-types.c  vmstate.c
qemu/qapi/: Makefile.objs  kcov.json  qapi-schema.json
qemu/util/: bitmap.c
scripts/: build-guest-agent.sh  build-linux-guest.sh  build-nvidia-driver.sh  build-qemu.sh  copy-modules.sh  create-debian-image.sh  fixup.py  mkfifo.sh  mount.sh  qemu.sh
(+219 files in other folders)
